wrote the thank you message

--- a/_posts/2020-05-25-memento.md
+++ b/_posts/2020-05-25-memento.md
@@ -28,3 +28,7 @@ one in b&w while other in colour, just helps you keep track and appreciate the s
 ### Other Links
 * Cover Image credit : [nofilmschool](https://nofilmschool.com/sites/default/files/styles/article_extra_wide/public/memento.jpg)
 * [IMDb](https://www.imdb.com/title/tt0209144/) rank 55 at the time of the review
+
+
+
+> Thanks for reading ❤
