--- a/_posts/2020-05-24-intro.md
+++ b/_posts/2020-05-24-intro.md
@@ -3,7 +3,7 @@ layout: post
 title: What is this webpage about?
 subtitle: Maybe just a hobby
 cover-img: /assets/img/path.jpg
-tags: [introduction, books, movies, tvshow]
+tags: [introduction]
 ---
 
 This website will contain primarily of movie reviews of the movies I love. Normally you won't find much
