life is beautiful done

--- a/_posts/2020-05-29-la-vita.md
+++ b/_posts/2020-05-29-la-vita.md
@@ -19,7 +19,8 @@ This movie is of genre history-fiction, and based on Italy during 1940s and 50s.
 * ***He won Oscar for Best Actor and Best Foreign Film, and nominations for Best Director and Best Picture.***
 
 ### Quotes
-* ******
+* ***What kind of place is this? It's beautiful. Pigeons fly, women fall from the sky. I'm moving here.***
+* ***Good morning, Princess!***
 
 ### Other Links
 * Cover Image credit : [Miramax](https://www.miramax.com/movie/life-is-beautiful-la-vita-e-bella/)
@@ -28,3 +29,7 @@ This movie is of genre history-fiction, and based on Italy during 1940s and 50s.
 
 
 > Thanks for reading ❤
+
+
+
+P.s I have kept review of this movie very vague, to not disclose any on the storyline. Story is really great but will be better experienced in form of the movie. I don't wanna ruin any of that fun.
